# supn_variational_mri

./: README.md
models/supn_models/: colour.py
models/utils/: blocks.py
post_estimation/: post_estimator.py  scaling128.pt  visualise_dps_comparison.py  visualise_post_correlations.py  visualise_prior_correlations.py  visualise_residuals.py
post_estimation/dps_comparisons/: dps_sampler.py  model.py  train.py
post_estimation/recon_configs/: config1  config10  config11  config12  config13  config14  config15  config16  config17  config18  config19  config2  config20  config21  config22  config23  config24  config25  config3  config4  config5  config6  config7  config8  config9
post_estimation/samples/: diff_samples_0.025.npy  diff_samples_0.05.npy  diff_samples_0.1.npy  diff_samples_0.2.npy  diff_samples_0.4.npy  ground_truth.npy  ground_truth_5.npy  supn_samples_0.025.npy  supn_samples_0.05.npy  supn_samples_0.1.npy  supn_samples_0.2.npy  supn_samples_0.4.npy
post_estimation/samples_22/: diff_samples_0.025.npy  diff_samples_0.05.npy  diff_samples_0.1.npy  diff_samples_0.2.npy  diff_samples_0.4.npy  supn_samples_0.025.npy  supn_samples_0.05.npy  (+3 more)
supn_base/: .gitignore  README.md  cholespy_solver.py  pyproject.toml  sparse_precision_cholesky.py  supn_data.py  supn_distribution.py  supn_preconditioners.py
supn_base/tests/: test_multichannel_2d.py  test_multichannel_3d.py  testing_utils.py  tests.py
supn_train/: n_channel_train.py
supn_train_configs/: fastMRI_complex_config
utils/: latent_distribution.py  losses.py  smooth_clip.py  supn_plotting.py
(+34 files in other folders)
