[project]
name = "supn_base"
version = "0.1.0"
description = "Structured Uncertainty Prediction Networks Basic Toolkit"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Teo Deveney", email = "T.J.Deveney@bath.ac.uk" },
    { name = "Paula Seidler", email = "ls749@sussex.ac.uk" },
    { name = "Neill D.F. Campbell", email = "n.campbell@bath.ac.uk" },
    { name = "Ivor Simpson", email = "i.simpson@sussex.ac.uk" }
]

dependencies = [
    "torch>=1.8.1",
    "torchvision>=0.9.1",
    "torchaudio>=0.9.1", 
    "numpy>=1.20.3",
    "scipy>=1.6.3",
    "matplotlib>=3.4.2",
    "scikit-image>=0.18.1",
    "scikit-learn>=1.0.2",
    "scikit-build",      
    "scikit-sparse", 
    "scikit-sparse>=0.4.15",     
    "nanobind",
    "cmake>=3.18"
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[project.optional-dependencies]
dev = [
    "pytest>=6.0", 
    "mypy>=0.9",
    "ruff>=0.0.10",
    "black>=22.3",
]
